--- a/styles/home.css
+++ b/styles/home.css
@@ -2,17 +2,11 @@
     box-sizing: border-box;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    background: rgb(199, 198, 198);
-    font-family: 'Souce Sans Pro', sans-serif;
-}
-
-/*Menu de navegação*/
+/*Menu navegation*/
 .topo{
     background: #00cad1;
     width: 100%;
+    box-shadow: 0px 02px 10px black;
 }
 
 .topo .container{
@@ -59,12 +53,189 @@ body{
 .topo-links a:hover{
     color: #000000;
     transition: 0.4s;
-    border-bottom: 4px solid #e8181897;
-    border-left: 1px solid #e8181897;
+}
+/*Fim menu de navegação*/
+
+/*Body the site*/
+body{
+    margin: 0;
+    padding: 0;
+    background: rgb(251, 249, 249);
+    font-family: 'Souce Sans Pro', sans-serif;
+    color: #313131;
 }
 
 main{
     max-width: 1024px;
     margin: 0 auto;
 }
+
+.container{
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
+.container-conteudo{
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.container-conteudo h2, .container-conteudo h3{
+    margin: 0;
+}
+
+#sobre, #especialidades, #contato{
+    padding: 20px 20px 0px;
+}
+
+.box-visao-geral{
+    position: relative;
+    background-image: url(../assets/recepcao.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 500px;
+    box-shadow: 0px 0px 10px black;
+    margin-top: 10px;
+}
+
+.box-visao-geral-titulo{
+    height: 100%;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.box-visao-geral-titulo h1{
+    font-weight: 600;
+    text-shadow: 2px 2px 5px black;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 38px;
+    margin: 10px auto;
+}
+
+.box-sobre{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-sobre h3{
+    font-weight: 500;
+    text-transform: uppercase;
+    padding-left: 25px;
+}
+
+.box-sobre img{
+    height: 350px;
+    border-radius: 10px;
+}
+
+.box-especialidades{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.box-especialidade{
+    border-radius: 5px;
+    box-shadow: 0 1px 10px rgb(0 0 0 / 60%);
+    margin: 20px;
+    width: calc(100%/3 - 40px);
+}
+
+.box-especialidade img{
+    width: 100%;
+}
+
+.box-especialidade figcaption{
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px #323232;
+    cursor: default;
+}
+
+.box-links-horarios{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 40px; 
+}
+
+.link-horarios{
+    background-color: #00cad1;
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px black;
+    position: absolute;
+}
+
+.link-horarios:hover{
+    color: #000000;
+    transition: 0.4s;
+    font-size: 18px;
+}
+
+/*end body*/
+
+/*Begins Footer*/
+footer{
+    background-color: #0d6e71;
+    color: #fff;
+}
+
+footer .container{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+/*end Footer*/
+
+/**********************************/
+
+/*Responsive pag home*/
+
+@media (max-width: 1024px){
+    .box-visao-geral{
+        height: 400px;
+    }
+}
+
+@media (max-width: 768px){
+    .topo a{
+        font-size: 18px;
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .box-visao-geral{ height: 300px;}
+    .box-sobre img{ display: none;}
+    .box-especialidades{justify-content: center;}
+    .box-especialidade{width: calc(100%/2 - 40px);}
+}
+
+@media (max-width: 425px){
+    .topo a{
+        font-size: 18px;
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .box-visao-geral{height: 200px;}
+    .box-visao-geral h1{ font-size: 28px;}
+    .box-especialidade{width: 100%;}
+}
+
+
+
+
+
+
 
